Check general GLM code, remove empirical checks
idem.

--- a/GLM - Plot Signs of FI and Deriv.ipynb
+++ b/GLM - Plot Signs of FI and Deriv.ipynb
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e0bad1c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T15:10:39.823281Z",
-     "iopub.status.busy": "2025-08-29T15:10:39.823281Z",
-     "iopub.status.idle": "2025-08-29T15:10:39.826381Z",
-     "shell.execute_reply": "2025-08-29T15:10:39.826381Z",
-     "shell.execute_reply.started": "2025-08-29T15:10:39.823281Z"
+     "iopub.execute_input": "2025-09-17T20:05:02.721590Z",
+     "iopub.status.busy": "2025-09-17T20:05:02.721590Z",
+     "iopub.status.idle": "2025-09-17T20:05:02.725191Z",
+     "shell.execute_reply": "2025-09-17T20:05:02.725191Z",
+     "shell.execute_reply.started": "2025-09-17T20:05:02.721590Z"
     }
    },
    "outputs": [],
@@ -35,7 +35,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from binary_links import Probit_Link, CLogLog_Link"
    ]
   },
   {
@@ -44,25 +45,6 @@
    "metadata": {},
    "source": [
     "# Helper Functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6295b409",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-29T15:10:40.297730Z",
-     "iopub.status.busy": "2025-08-29T15:10:40.296722Z",
-     "iopub.status.idle": "2025-08-29T15:10:40.300089Z",
-     "shell.execute_reply": "2025-08-29T15:10:40.300089Z",
-     "shell.execute_reply.started": "2025-08-29T15:10:40.297730Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "## import link functions:\n",
-    "from binary_links import *"
    ]
   },
   {
@@ -83,11 +65,11 @@
     "def clean_values(df):\n",
     "    temp_df = pd.DataFrame(df)\n",
     "\n",
-    "    temp_df.columns = ['x', 'beta', 'deriv_fi']\n",
-    "    temp_df['beta'] = np.round(temp_df['beta'], 3)\n",
-    "    temp_df['x'] = np.round(temp_df['x'], 3)\n",
-    "    temp_df = temp_df.pivot(columns = 'x', values = 'deriv_fi', index = 'beta')\n",
-    "    \n",
+    "    temp_df.columns = [\"x\", \"beta\", \"deriv_fi\"]\n",
+    "    temp_df[\"beta\"] = np.round(temp_df[\"beta\"], 3)\n",
+    "    temp_df[\"x\"] = np.round(temp_df[\"x\"], 3)\n",
+    "    temp_df = temp_df.pivot(columns=\"x\", values=\"deriv_fi\", index=\"beta\")\n",
+    "\n",
     "    return temp_df"
    ]
   },
@@ -144,7 +126,7 @@
     "beta_abs_max = 2\n",
     "\n",
     "x_range = np.linspace(-x_abs_max, x_abs_max, num=1 + x_abs_max * max_mult)\n",
-    "beta_range = np.linspace(-beta_abs_max, beta_abs_max, num =1 + beta_abs_max * max_mult)"
+    "beta_range = np.linspace(-beta_abs_max, beta_abs_max, num=1 + beta_abs_max * max_mult)"
    ]
   },
   {
@@ -227,7 +209,9 @@
     "beta_abs_max = 1.5\n",
     "\n",
     "x_range = np.linspace(-x_abs_max, x_abs_max, num=1 + int(x_abs_max * max_mult))\n",
-    "beta_range = np.linspace(-beta_abs_max, beta_abs_max, num =1 + int(beta_abs_max * max_mult))"
+    "beta_range = np.linspace(\n",
+    "    -beta_abs_max, beta_abs_max, num=1 + int(beta_abs_max * max_mult)\n",
+    ")"
    ]
   },
   {
@@ -253,7 +237,7 @@
     }
    ],
    "source": [
-    "clog_log = CLogLogLink()\n",
+    "clog_log = CLogLog_Link()\n",
     "\n",
     "pos_y_vals = []\n",
     "zero_y_vals = []\n",
@@ -388,32 +372,60 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(2, 2, \n",
-    "                         constrained_layout=True, \n",
-    "                         figsize=(12, 10))\n",
-    "sns.heatmap(np.sign(probit_zero_y_vals), ax = axes[0][0], cbar=False, xticklabels=x_tick_freq, yticklabels=y_tick_freq, cmap=cmap)\n",
-    "sns.heatmap(np.sign(probit_pos_y_vals), ax = axes[0][1], cbar=False, xticklabels=x_tick_freq, yticklabels=y_tick_freq, cmap=cmap)\n",
+    "fig, axes = plt.subplots(2, 2, constrained_layout=True, figsize=(12, 10))\n",
+    "sns.heatmap(\n",
+    "    np.sign(probit_zero_y_vals),\n",
+    "    ax=axes[0][0],\n",
+    "    cbar=False,\n",
+    "    xticklabels=x_tick_freq,\n",
+    "    yticklabels=y_tick_freq,\n",
+    "    cmap=cmap,\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    np.sign(probit_pos_y_vals),\n",
+    "    ax=axes[0][1],\n",
+    "    cbar=False,\n",
+    "    xticklabels=x_tick_freq,\n",
+    "    yticklabels=y_tick_freq,\n",
+    "    cmap=cmap,\n",
+    ")\n",
     "\n",
-    "sns.heatmap(np.sign(cloglog_zero_y_vals), ax = axes[1][0], cbar=False, xticklabels=x_tick_freq, yticklabels=y_tick_freq, cmap=cmap)\n",
-    "sns.heatmap(np.sign(cloglog_pos_y_vals), ax = axes[1][1], cbar=False, xticklabels=x_tick_freq, yticklabels=y_tick_freq, cmap=cmap)\n",
+    "sns.heatmap(\n",
+    "    np.sign(cloglog_zero_y_vals),\n",
+    "    ax=axes[1][0],\n",
+    "    cbar=False,\n",
+    "    xticklabels=x_tick_freq,\n",
+    "    yticklabels=y_tick_freq,\n",
+    "    cmap=cmap,\n",
+    ")\n",
+    "sns.heatmap(\n",
+    "    np.sign(cloglog_pos_y_vals),\n",
+    "    ax=axes[1][1],\n",
+    "    cbar=False,\n",
+    "    xticklabels=x_tick_freq,\n",
+    "    yticklabels=y_tick_freq,\n",
+    "    cmap=cmap,\n",
+    ")\n",
     "for i in range(2):\n",
     "    for j in range(2):\n",
     "        ax = axes[i][j]\n",
     "        if i == 1:\n",
     "            ax.set_xlabel(f\"Target = {j}\")\n",
     "        else:\n",
-    "            ax.set_xlabel(f\"\")\n",
+    "            ax.set_xlabel(\"\")\n",
     "        if j == 0:\n",
     "            if i == 0:\n",
-    "                ax.set_ylabel('Probit')\n",
+    "                ax.set_ylabel(\"Probit\")\n",
     "            else:\n",
-    "                ax.set_ylabel('Cloglog')\n",
+    "                ax.set_ylabel(\"Cloglog\")\n",
     "        else:\n",
-    "            ax.set_ylabel(f\"\")\n",
-    "fig.suptitle(\"Sign of the Derivative of the Fisher Information across \" + \\\n",
-    "             \"Betas, Features, Targets, and Link Functions\")\n",
+    "            ax.set_ylabel(\"\")\n",
+    "fig.suptitle(\n",
+    "    \"Sign of the Derivative of the Fisher Information across \"\n",
+    "    + \"Betas, Features, Targets, and Link Functions\"\n",
+    ")\n",
     "fig.supxlabel(\"Feature Values (Across Target Values)\")\n",
-    "fig.supylabel(\"Beta Values (Across Link Functions)\") \n",
+    "fig.supylabel(\"Beta Values (Across Link Functions)\")\n",
     "plt.savefig(f\"fi_deriv_signs{savefile_suffix}\")"
    ]
   },
