--- a/GLM - Plot Score vs Unit FI.ipynb
+++ b/GLM - Plot Score vs Unit FI.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db6d0919-cd7a-4a2f-885a-cf1786ead5c7",
-   "metadata": {},
-   "source": [
-    "Here, we plot the score of the logistic model versus the unit Fisher Information."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c5c011f0",
    "metadata": {},
    "source": [
@@ -18,33 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc17a431-1e67-44c6-829d-d7bcb8ae26bb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-29T15:07:26.077917Z",
-     "iopub.status.busy": "2025-08-29T15:07:26.077917Z",
-     "iopub.status.idle": "2025-08-29T15:07:26.082412Z",
-     "shell.execute_reply": "2025-08-29T15:07:26.081909Z",
-     "shell.execute_reply.started": "2025-08-29T15:07:26.077917Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from tqdm import tqdm, trange\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
-    "import statsmodels.api as sm\n",
-    "from scipy.special import expit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "813a88a6-ca2c-4822-8972-bdb711731e72",
+   "execution_count": null,
+   "id": "1bad0a43-8b06-4046-8566-b84c6bfd0ad7",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-29T15:07:26.262079Z",
@@ -56,7 +23,17 @@
    },
    "outputs": [],
    "source": [
-    "from data_generating_utils import *"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from tqdm import trange\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
+    "from scipy.special import expit\n",
+    "from data_generating_utils import generate_population_data\n",
+    "import warnings\n",
+    "# Ignore all FutureWarnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -69,34 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5c822295-4f08-48aa-b392-b74def5e7228",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-29T15:07:27.400116Z",
-     "iopub.status.busy": "2025-08-29T15:07:27.399100Z",
-     "iopub.status.idle": "2025-08-29T15:07:27.403254Z",
-     "shell.execute_reply": "2025-08-29T15:07:27.403254Z",
-     "shell.execute_reply.started": "2025-08-29T15:07:27.400116Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "population_size = 100_000\n",
-    "number_of_coefficients = 1\n",
-    "true_betas = [1, -1]\n",
-    "sample_size = 1_000\n",
-    "num_iter = 1_000\n",
-    "\n",
-    "### for RNG seed:\n",
-    "pop_index = 1\n",
-    "iter_val = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "37ffb9ac-84fa-475e-a2c9-a1582f31572b",
+   "execution_count": null,
+   "id": "283a7300-6124-4321-adb4-c92fcf9b2b38",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-29T15:07:27.660868Z",
@@ -108,6 +59,14 @@
    },
    "outputs": [],
    "source": [
+    "population_size = 100_000\n",
+    "number_of_coefficients = 1\n",
+    "true_betas = [1, -1]\n",
+    "sample_size = 1_000\n",
+    "num_iter = 1_000\n",
+    "\n",
+    "pop_index = 1\n",
+    "iter_val = 0\n",
     "rand_generator = np.random.default_rng(seed=333 * pop_index + iter_val)\n",
     "feature_cols = [f'x_{i}' for i in range(number_of_coefficients)]"
    ]
@@ -175,16 +134,12 @@
    "execution_count": 15,
    "id": "1b797230-f862-4b5e-b9e0-f0c48355ecba",
    "metadata": {
-    "collapsed": true,
     "execution": {
      "iopub.execute_input": "2025-08-29T15:09:52.575882Z",
      "iopub.status.busy": "2025-08-29T15:09:52.574635Z",
      "iopub.status.idle": "2025-08-29T15:10:08.886903Z",
      "shell.execute_reply": "2025-08-29T15:10:08.886903Z",
      "shell.execute_reply.started": "2025-08-29T15:09:52.575882Z"
-    },
-    "jupyter": {
-     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -4211,20 +4166,25 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(len(true_betas), 2, \n",
-    "                         constrained_layout=True, \n",
-    "                         figsize=(6, 5))\n",
+    "fig, axes = plt.subplots(len(true_betas), 2, constrained_layout=True, figsize=(6, 5))\n",
     "\n",
     "for true_beta_index in trange(len(true_betas)):\n",
     "    true_beta = true_betas[true_beta_index]\n",
-    "    pop_data = generate_population_data(population_size, number_of_coefficients, rand_generator,\n",
-    "                                    feature_cols = feature_cols, true_beta = true_beta)\n",
-    "    pop_model = sm.Logit(endog = pop_data['y'], exog = pop_data['x_0']).fit(disp=0)\n",
+    "    pop_data = generate_population_data(\n",
+    "        population_size,\n",
+    "        number_of_coefficients,\n",
+    "        rand_generator,\n",
+    "        feature_cols=feature_cols,\n",
+    "        true_beta=true_beta,\n",
+    "    )\n",
+    "    pop_model = sm.Logit(endog=pop_data[\"y\"], exog=pop_data[\"x_0\"]).fit(disp=0)\n",
     "    pop_beta = pop_model.params[0]\n",
-    "    \n",
-    "    pop_data['pop_eta'] = expit(pop_beta * pop_data['x_0'])\n",
-    "    pop_data['pop_score'] = pop_data.eval('x_0 * (y - pop_eta)')\n",
-    "    pop_data['pop_neg_deriv_score'] = pop_data.eval('(x_0 ** 2) * (1 - pop_eta) * pop_eta')\n",
+    "\n",
+    "    pop_data[\"pop_eta\"] = expit(pop_beta * pop_data[\"x_0\"])\n",
+    "    pop_data[\"pop_score\"] = pop_data.eval(\"x_0 * (y - pop_eta)\")\n",
+    "    pop_data[\"pop_neg_deriv_score\"] = pop_data.eval(\n",
+    "        \"(x_0 ** 2) * (1 - pop_eta) * pop_eta\"\n",
+    "    )\n",
     "\n",
     "    \"\"\"\n",
     "        Plot score vs FI evaluated at the Population:\n",
@@ -4232,53 +4192,75 @@
     "    ax = axes[true_beta_index][0]\n",
     "    all_sample_data_for_score = []\n",
     "    for _ in range(num_iter):\n",
-    "        all_sample_data_for_score.append(pop_data.sample(sample_size)[['pop_score', 'pop_neg_deriv_score']].mean())\n",
-    "    \n",
-    "    \n",
+    "        all_sample_data_for_score.append(\n",
+    "            pop_data.sample(sample_size)[[\"pop_score\", \"pop_neg_deriv_score\"]].mean()\n",
+    "        )\n",
+    "\n",
     "    all_sample_data_for_score = pd.concat(all_sample_data_for_score, axis=1).T\n",
-    "    sns.kdeplot(data = all_sample_data_for_score, x='pop_neg_deriv_score', \\\n",
-    "                y = 'pop_score', fill=True, bw_adjust=1.8, levels=5, ax=ax)\n",
+    "    sns.kdeplot(\n",
+    "        data=all_sample_data_for_score,\n",
+    "        x=\"pop_neg_deriv_score\",\n",
+    "        y=\"pop_score\",\n",
+    "        fill=True,\n",
+    "        bw_adjust=1.8,\n",
+    "        levels=5,\n",
+    "        ax=ax,\n",
+    "    )\n",
     "\n",
     "    ax.set_ylabel(f\"Superpopulation beta = {true_beta}\")\n",
     "    if true_beta_index == len(true_betas) - 1:\n",
-    "        ax.set_xlabel(f\"Population beta\")            \n",
-    "    else: \n",
+    "        ax.set_xlabel(\"Population beta\")\n",
+    "    else:\n",
     "        ax.set_xlabel(\"\")\n",
-    "        \n",
+    "\n",
     "    \"\"\"\n",
     "        Plot score vs FI evaluated at the Sample Beta:\n",
     "    \"\"\"\n",
     "    ax = axes[true_beta_index][1]\n",
     "    all_sample_data_for_score = []\n",
-    "    for _ in range(num_iter):    \n",
+    "    for _ in range(num_iter):\n",
     "        samp_data = pop_data.sample(sample_size).copy()\n",
-    "        samp_model = sm.Logit(endog = samp_data['y'], exog = samp_data['x_0']).fit(disp = 0)\n",
+    "        samp_model = sm.Logit(endog=samp_data[\"y\"], exog=samp_data[\"x_0\"]).fit(disp=0)\n",
     "        samp_beta = samp_model.params[0]\n",
-    "        samp_data['eta_sample'] = expit(samp_beta * samp_data['x_0'])\n",
-    "        samp_data['neg_deriv_score_sample'] = samp_data.eval('(x_0 ** 2) * (1 - eta_sample) * eta_sample')\n",
-    "        all_sample_data_for_score.append(\n",
-    "            samp_data[['pop_score', 'pop_neg_deriv_score', 'neg_deriv_score_sample']].mean()\n",
+    "        samp_data[\"eta_sample\"] = expit(samp_beta * samp_data[\"x_0\"])\n",
+    "        samp_data[\"neg_deriv_score_sample\"] = samp_data.eval(\n",
+    "            \"(x_0 ** 2) * (1 - eta_sample) * eta_sample\"\n",
     "        )\n",
-    "\n",
+    "        all_sample_data_for_score.append(\n",
+    "            samp_data[\n",
+    "                [\"pop_score\", \"pop_neg_deriv_score\", \"neg_deriv_score_sample\"]\n",
+    "            ].mean()\n",
+    "        )\n",
     "\n",
     "    all_sample_data_for_score = pd.concat(all_sample_data_for_score, axis=1).T\n",
     "\n",
-    "    sns.kdeplot(data = all_sample_data_for_score, x='neg_deriv_score_sample', \\\n",
-    "                y = 'pop_score', fill=True, bw_adjust=1.8, levels=5, ax=ax)\n",
-    "    \n",
+    "    sns.kdeplot(\n",
+    "        data=all_sample_data_for_score,\n",
+    "        x=\"neg_deriv_score_sample\",\n",
+    "        y=\"pop_score\",\n",
+    "        fill=True,\n",
+    "        bw_adjust=1.8,\n",
+    "        levels=5,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "\n",
     "    ax.set_ylabel(\"\")\n",
     "    if true_beta_index == len(true_betas) - 1:\n",
-    "        ax.set_xlabel(f\"Sample beta\")            \n",
-    "    else: \n",
-    "        ax.set_xlabel(\"\") \n",
+    "        ax.set_xlabel(\"Sample beta\")\n",
+    "    else:\n",
+    "        ax.set_xlabel(\"\")\n",
     "\n",
-    "fig.suptitle('Score Function vs Unit Fisher Information Across \\n' + \n",
-    "             f'Superpopulation Betas and Fisher Information Evaluation Points')\n",
-    "fig.supylabel('Score Function (Across Superpopulation Betas)')\n",
-    "fig.supxlabel('Unit Fisher Information \\n (Across Evaluating it at the ' + \\\n",
-    "              'Population or Sample Beta)')\n",
+    "fig.suptitle(\n",
+    "    \"Score Function vs Unit Fisher Information Across \\n\"\n",
+    "    + \"Superpopulation Betas and Fisher Information Evaluation Points\"\n",
+    ")\n",
+    "fig.supylabel(\"Score Function (Across Superpopulation Betas)\")\n",
+    "fig.supxlabel(\n",
+    "    \"Unit Fisher Information \\n (Across Evaluating it at the \"\n",
+    "    + \"Population or Sample Beta)\"\n",
+    ")\n",
     "\n",
-    "plt.savefig(f'score_vs_unit_fi{savefile_suffix}.png')"
+    "plt.savefig(f\"score_vs_unit_fi{savefile_suffix}.png\")"
    ]
   },
   {
