Modify Util Imports
idem.

--- a/Section 4.2 - GLMs - DDC v Sample Elasticity/CLogLog Generator -1 Slope.ipynb
+++ b/Section 4.2 - GLMs - DDC v Sample Elasticity/CLogLog Generator -1 Slope.ipynb
@@ -14,11 +14,11 @@
    "id": "04b3d52c-284f-4bb5-875f-69b467085c68",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-17T18:40:58.270232Z",
-     "iopub.status.busy": "2025-09-17T18:40:58.270232Z",
-     "iopub.status.idle": "2025-09-17T18:40:59.540933Z",
-     "shell.execute_reply": "2025-09-17T18:40:59.540933Z",
-     "shell.execute_reply.started": "2025-09-17T18:40:58.270232Z"
+     "iopub.execute_input": "2026-02-22T22:35:13.102192Z",
+     "iopub.status.busy": "2026-02-22T22:35:13.102192Z",
+     "iopub.status.idle": "2026-02-22T22:35:15.133539Z",
+     "shell.execute_reply": "2026-02-22T22:35:15.133539Z",
+     "shell.execute_reply.started": "2026-02-22T22:35:13.102192Z"
     }
    },
    "outputs": [],
@@ -35,7 +35,7 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../\")\n",
+    "sys.path.append(\"../Utils/\")\n",
     "from data_generating_utils import generate_population_data\n",
     "from ddc_utils import (\n",
     "    compute_all_three_logistic_models,\n",
