--- a/Section 4.2 - GLMs - DDC v Sample Elasticity/Logit Generator -1 Slope.ipynb
+++ b/Section 4.2 - GLMs - DDC v Sample Elasticity/Logit Generator -1 Slope.ipynb
@@ -35,7 +35,7 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../\")\n",
+    "sys.path.append(\"../Utils/\")\n",
     "from data_generating_utils import generate_population_data\n",
     "from ddc_utils import (\n",
     "    compute_all_three_logistic_models,\n",
@@ -687,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
