--- a/Other Figures/Sec 4.2 - GLM - Plotting the Observed Fisher Information and Derivatives/GLM - Plot Signs of FI and Deriv.ipynb
+++ b/Other Figures/Sec 4.2 - GLM - Plotting the Observed Fisher Information and Derivatives/GLM - Plot Signs of FI and Deriv.ipynb
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e0bad1c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-17T20:05:02.721590Z",
-     "iopub.status.busy": "2025-09-17T20:05:02.721590Z",
-     "iopub.status.idle": "2025-09-17T20:05:02.725191Z",
-     "shell.execute_reply": "2025-09-17T20:05:02.725191Z",
-     "shell.execute_reply.started": "2025-09-17T20:05:02.721590Z"
+     "iopub.execute_input": "2026-02-25T20:21:17.093230Z",
+     "iopub.status.busy": "2026-02-25T20:21:17.093230Z",
+     "iopub.status.idle": "2026-02-25T20:21:17.097349Z",
+     "shell.execute_reply": "2026-02-25T20:21:17.097349Z",
+     "shell.execute_reply.started": "2026-02-25T20:21:17.093230Z"
     }
    },
    "outputs": [],
@@ -36,6 +36,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"../../Utils/\")\n",
     "from binary_links import Probit_Link, CLogLog_Link"
    ]
   },
@@ -49,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "1baccdef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T16:55:58.696987Z",
-     "iopub.status.busy": "2025-08-29T16:55:58.695988Z",
-     "iopub.status.idle": "2025-08-29T16:55:58.702594Z",
-     "shell.execute_reply": "2025-08-29T16:55:58.702594Z",
-     "shell.execute_reply.started": "2025-08-29T16:55:58.696987Z"
+     "iopub.execute_input": "2026-02-25T20:20:34.313619Z",
+     "iopub.status.busy": "2026-02-25T20:20:34.312590Z",
+     "iopub.status.idle": "2026-02-25T20:20:34.317639Z",
+     "shell.execute_reply": "2026-02-25T20:20:34.317639Z",
+     "shell.execute_reply.started": "2026-02-25T20:20:34.313619Z"
     }
    },
    "outputs": [],
@@ -83,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d5540a6d-b1f0-4d31-832a-6675dc35ab2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-29T15:10:41.044472Z",
-     "iopub.status.busy": "2025-08-29T15:10:41.044472Z",
-     "iopub.status.idle": "2025-08-29T15:10:41.048610Z",
-     "shell.execute_reply": "2025-08-29T15:10:41.048610Z",
-     "shell.execute_reply.started": "2025-08-29T15:10:41.044472Z"
+     "iopub.execute_input": "2026-02-25T20:20:35.060399Z",
+     "iopub.status.busy": "2026-02-25T20:20:35.060399Z",
+     "iopub.status.idle": "2026-02-25T20:20:35.065246Z",
+     "shell.execute_reply": "2026-02-25T20:20:35.065246Z",
+     "shell.execute_reply.started": "2026-02-25T20:20:35.060399Z"
     }
    },
    "outputs": [],
